style adjustments. attempt 1 to fix form styling on mobile.

--- a/css/library.css
+++ b/css/library.css
@@ -8,7 +8,6 @@
     * {
       margin: 0;
       padding: 0;
-
       font: inherit; /* gets rid of all default font sizes and weights, leaving it up to us to style elements with css instead of using heading levels and elements to do it */
     }
 
@@ -24,12 +23,20 @@
     body {
       min-height: 100vh;
       padding: 1rem;
+      position: relative;
     }
 
     /* make these items responsive */
-    img, picture, svg, video {
+    /* img, picture, svg, video {
       display: block;
       max-width: 100%;
+    } */
+
+    input {
+      font-family: inherit;
+      font-size: 100%;
+      padding: .25rem;
+      border: none;
     }
 
 /*-----------------*/
@@ -47,20 +54,19 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      position: relative;
     }
 
     .siteTitle {
-      font-size: 4rem;
+      font-size: 5rem;
       letter-spacing: 4px;
       color: var(--color3);
-      margin-top: 30%;
+      /* margin-top: 30%; */
       position: fixed;
-      top:-400px;
+      top:2rem;
     }
     .siteTitle::before {
       content: "The Book Cave";
-      font-size: 4rem;
+      font-size: 5rem;
       transform: scale(.95);
       letter-spacing: 4px;
       color: var(--color1);
@@ -113,7 +119,7 @@
       margin-top: 15vh;
       padding: 20px;
       border: 4px solid var(--color2);
-      width: min(400px,85%);
+      width: min(500px,85%);
       position: relative;
       /* animation: modalEntrance 700ms; */
     }
@@ -134,9 +140,46 @@
       }
     }
 
-  
     input:focus{
       outline: var(--color1) 2px solid;
+    }
+
+    form label {
+      color: var(--color3);
+      font-size: 1.5rem;
+    }
+
+    input[type='text'] {
+      width: 75%;
+      background-color: var(--color2);
+    }
+    input[type='number'] {
+      width: 15%;
+      background-color: var(--color2);
+    }
+
+    form input[type='checkbox'] {
+      -ms-transform: scale(2.5); /* IE */
+      -moz-transform: scale(2.5); /* FF */
+      -webkit-transform: scale(2.5); /* Safari and Chrome */
+      -o-transform: scale(2.5);
+      transform: scale(2.5);
+      background-color: var(--color2);
+      margin-left: .5rem;
+      outline:none;
+      accent-color: var(--color3);
+    }
+ 
+    input[type='checkbox'] {
+      -ms-transform: scale(1.25); 
+      -moz-transform: scale(1.25); 
+      -webkit-transform: scale(1.25); 
+      -o-transform: scale(1.25);
+      transform: scale(1.25);
+      background-color: var(--color2);
+      margin-left: .5rem;
+      outline:none;
+      accent-color: var(--color3);
     }
 
     input[type='submit'] {
@@ -149,12 +192,6 @@
       right: 1rem;
       bottom: 1rem;
     }
-
-    input[type='text'] {
-      width: 80%;
-    }
-
-   
 
     /* The Close Button */
     .close {
@@ -180,6 +217,9 @@
         padding:1rem;
         margin:auto;
     }    */
+
+
+
 
     .flex_container {
       display: flex;
@@ -252,4 +292,10 @@
 
     .book__close {
       cursor: pointer;
+      transform: scale(1.5);
+      color: black;
+    }
+
+    .book__close:hover {
+      color: red
     }
